<resources>
    <string name="app_name">My Virtual Pet</string>
    <string name="hello_blank_fragment">Hello</string>

    <!-- Login Screen Text -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_check">Re-enter password</string>
    <string name="email">Email</string>
    <string name="have_account">Already have an account?</string>


    <!-- Content Descriptions -->
    <string name="cd_logo">Game Logo</string>
    <string name="cd_map">Map</string>
    <string name="cd_pets">Pets</string>
    <string name="cd_options">Options</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_map2">Map</string>
</resources>
