<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:animateLayoutChanges="true"
    android:theme="@style/AppTheme">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">

        <ImageView
            android:id="@+id/LogoIMG"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cd_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LogoIMG">

            <TextView
                android:id="@+id/RegisterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:fontFamily="sans-serif-medium"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RegisterText"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/EmailEntry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:fontFamily="sans-serif-light" />

                    <EditText
                        android:id="@+id/et_email_register"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/text_entry_box"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:fontFamily="sans-serif-light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/UsernameEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:fontFamily="sans-serif-light" />

                    <EditText
                        android:id="@+id/et_username_register"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/text_entry_box"
                        android:hint="@string/username"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:fontFamily="sans-serif-light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/PasswordEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:fontFamily="sans-serif-light" />

                    <EditText
                        android:id="@+id/et_password_register"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/text_entry_box"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:fontFamily="sans-serif-light" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/PasswordCheckEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password_check"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:fontFamily="sans-serif-light" />

                    <EditText
                        android:id="@+id/et_password_check_register"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/text_entry_box"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:fontFamily="sans-serif-light" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/button"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="visible"
                app:fontFamily="sans-serif-medium" />

            <ProgressBar
                android:id="@+id/progress_bar_register"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LinearLayout1"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="25dp"
                android:layout_toEndOf="@+id/btn_register"
                android:layout_toRightOf="@+id/btn_register"
                android:background="@color/transparent"
                android:progressDrawable="@drawable/button" />


        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_returnToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/have_account"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:fontFamily="sans-serif-medium" />



    </RelativeLayout>

</RelativeLayout>